tests/negative/for_complex.em
int main() {
    for (int i = 0 i < 5 i++) {
        int x = i;
    }
    return 0;
}